kubernetes/definitions/config-cmd-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-service
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-srv
    args: ["100", "M", "YES"]
    ports:
    - containerPort: 6200
      protocol: TCP
