kubernetes/definitions/config-pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-service
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-srv
    ports:
    - containerPort: 6200
      protocol: TCP
