kubernetes/definitions/config-pod-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-service
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-srv
    ports:
    - containerPort: 6200
      protocol: TCP
    volumeMounts:
    - name: settings
      mountPath: /etc/kube-config/settings
      readOnly: true
  volumes:
  - name: settings
    configMap:
      name: volume-config
