kubernetes/definitions/deamonset-definition.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon-kube-service
spec:
  selector:
    matchLabels:
      app: service-api
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
      - name: main
        image: blgreco72dev/kube-service
