kubernetes/definitions/deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-service
  template:
    metadata:
      name: kube-service
      labels: 
        app: kube-service
    spec:
      containers:
      - image: blgreco72dev/kube-service:v2
        name: kube-service
