kubernetes/definitions/labeled-pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: labled-kube-service
  labels:
    app:  accounting
    area: invoices
    env: prod
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-service
    ports:
    - containerPort: 6200
      protocol: TCP
