kubernetes/definitions/meta-pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-service
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-srv
    ports:
    - containerPort: 6200
      protocol: TCP
    resources:
      requests:
        cpu: 15m
        memory: 1000Ki
