kubernetes/definitions/meta-pod-volume-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-service
  labels:
    system: one
    version: v222
  annotations:
    department: claims
    summary: |
      This is an example of specifying
      multiple lines.
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-srv
    ports:
    - containerPort: 6200
      protocol: TCP
    resources:
      requests:
        cpu: 15m
        memory: 100Ki
    volumeMounts:
    - name: downward
      mountPath: /etc/downward
  volumes:
    - name: downward
      downwardAPI:
        items:
        - path: "podName"
          fieldRef:
            fieldPath: metadata.name
        - path: "podNamespace"
          fieldRef:
            fieldPath: metadata.namespace
        - path: "labels"
          fieldRef:
            fieldPath: metadata.labels
        - path: "annotations"
          fieldRef:
            fieldPath: metadata.annotations
        - path: "containerCpuRequestsMilliCores"
          resourceFieldRef:
            containerName: kube-srv
            resource: requests.cpu
            divisor: 1m
