kubernetes/definitions/secret-pod-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-service
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-srv
    volumeMounts:
    - name: secret-data
      mountPath: /etc/kube-config/settings
      readOnly: true
    ports:
    - containerPort: 6200
      protocol: TCP
  volumes:
  - name: secret-data
    secret:
      secretName: close-eyes
