kubernetes/definitions/volume-memory.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-service
spec:
  containers:
  - image: blgreco72dev/kube-service
    name: kube-srv
    volumeMounts:
    - name: received-data
      mountPath: /data/files
    ports:
    - containerPort: 6200
      protocol: TCP
  volumes:
  - name: received-data
    emptyDir:
      medium: Memory
