kubernetes/definitions/clusterip-srv-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-service-ci
spec:
  ports:
  - port: 80
    targetPort: 6200
  selector:
    app: kube-srv
