kubernetes/definitions/external-cluster-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:  
    - ip: 172.217.164.174
    - ip: 205.251.242.103  
    ports:
    - port: 80
