kubernetes/definitions/ingress-controller-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kube-apis.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-service-ci
            port:
              number: 6200
