kubernetes/definitions/ingress-controller-definition2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: kube-apis.info
    http:
      paths:
      - path: /rating(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kube-service-ci
            port:
              number: 6200
